[package]
name = "timer"
version = "0.1.0"
authors = ["howz97 <964701944@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
hashbrown = "0.11.2"
log = "0.4.14"
env_logger = "0.8.4"
rand = "0.8.4"
