[package]
name = "time_wheel"
version = "0.1.2"
authors = ["howz97 <964701944@qq.com>"]
edition = "2018"
description = "An implementation of timer uses time-wheel algorithm"
readme = "README.md"
repository = "https://github.com/howz97/time_wheel"
license = "MIT"
keywords = ["timer", "time-wheel"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
hashbrown = "0.11.2"
log = "0.4.14"
env_logger = "0.8.4"

[dev-dependencies]
rand = "0.8.4"
